--- a/Sources/en.lproj/MainStoryboard.storyboard
+++ b/Sources/en.lproj/MainStoryboard.storyboard
@@ -390,6 +390,13 @@
                                             <action selector="addClue:" destination="Puv-6a-Vs4" eventType="touchUpInside" id="oRk-hR-vv5"/>
                                         </connections>
                                     </button>
+                                    <navigationBar contentMode="scaleToFill" id="c3O-TT-ybH">
+                                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <items>
+                                            <navigationItem title="Title" id="rrf-6z-7Nw"/>
+                                        </items>
+                                    </navigationBar>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
