--- a/Sources/en.lproj/MainStoryboard.storyboard
+++ b/Sources/en.lproj/MainStoryboard.storyboard
@@ -357,45 +357,29 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" id="kAI-ZN-VEq" userLabel="Content View">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="524"/>
+                                <rect key="frame" x="-7" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tiK-Ib-eWo">
-                                        <rect key="frame" x="4" y="4" width="32" height="32"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" backgroundImage="CloseButton.png">
-                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="close:" destination="Puv-6a-Vs4" eventType="touchUpInside" id="IFQ-6i-PRU"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hG0-H0-h51">
-                                        <rect key="frame" x="284" y="4" width="32" height="32"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                        <state key="normal" image="ClueButton.png">
-                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <state key="highlighted">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="addClue:" destination="Puv-6a-Vs4" eventType="touchUpInside" id="oRk-hR-vv5"/>
-                                        </connections>
-                                    </button>
                                     <navigationBar contentMode="scaleToFill" id="c3O-TT-ybH">
                                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <items>
-                                            <navigationItem title="Title" id="rrf-6z-7Nw"/>
+                                            <navigationItem id="rrf-6z-7Nw">
+                                                <barButtonItem key="leftBarButtonItem" title="Close" id="Oqi-jA-XHP">
+                                                    <connections>
+                                                        <action selector="close:" destination="Puv-6a-Vs4" id="MM7-mO-hB0"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                                <barButtonItem key="rightBarButtonItem" title="Add Clue" id="SQL-5m-3lt">
+                                                    <connections>
+                                                        <action selector="addClue:" destination="Puv-6a-Vs4" id="lYP-fj-hoY"/>
+                                                    </connections>
+                                                </barButtonItem>
+                                            </navigationItem>
                                         </items>
+                                        <connections>
+                                            <outlet property="delegate" destination="Puv-6a-Vs4" id="JZT-hr-47o"/>
+                                        </connections>
                                     </navigationBar>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -427,6 +411,8 @@
                     </view>
                     <connections>
                         <outlet property="contentView" destination="kAI-ZN-VEq" id="C5c-ph-jRM"/>
+                        <outlet property="navigationBar" destination="c3O-TT-ybH" id="aIc-Hc-TwN"/>
+                        <outlet property="toolbar" destination="a9V-ab-Ldt" id="Wnv-Xm-djI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wre-tV-Jey" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -728,8 +714,6 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         </scene>
     </scenes>
     <resources>
-        <image name="CloseButton.png" width="33" height="33"/>
-        <image name="ClueButton.png" width="33" height="33"/>
         <image name="MyMapsBarIcon.png" width="27" height="29"/>
         <image name="SharedMapsBarIcon.png" width="36" height="26"/>
     </resources>
