--- a/Sources/en.lproj/MainStoryboard.storyboard
+++ b/Sources/en.lproj/MainStoryboard.storyboard
@@ -360,11 +360,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kAI-ZN-VEq" userLabel="Content View">
-                                <rect key="frame" x="-7" y="0.0" width="320" height="568"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAI-ZN-VEq" userLabel="Content View">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c3O-TT-ybH">
+                                    <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c3O-TT-ybH">
                                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <items>
@@ -387,8 +387,12 @@
                                     </navigationBar>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="c3O-TT-ybH" secondAttribute="trailing" id="NBC-NV-0Ue"/>
+                                    <constraint firstItem="c3O-TT-ybH" firstAttribute="leading" secondItem="kAI-ZN-VEq" secondAttribute="leading" id="Wil-FG-umX"/>
+                                </constraints>
                             </view>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a9V-ab-Ldt">
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a9V-ab-Ldt">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
@@ -412,6 +416,16 @@
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kAI-ZN-VEq" firstAttribute="top" secondItem="hzx-Az-6jp" secondAttribute="top" id="0Qn-Dj-3Gf"/>
+                            <constraint firstItem="2ly-44-9L5" firstAttribute="top" secondItem="kAI-ZN-VEq" secondAttribute="bottom" id="1MG-ZW-lGM"/>
+                            <constraint firstItem="kAI-ZN-VEq" firstAttribute="leading" secondItem="a9V-ab-Ldt" secondAttribute="leading" id="1eE-k6-WVY"/>
+                            <constraint firstItem="c3O-TT-ybH" firstAttribute="top" secondItem="0cG-4i-Ydm" secondAttribute="bottom" id="dJz-yb-f3K"/>
+                            <constraint firstItem="kAI-ZN-VEq" firstAttribute="leading" secondItem="hzx-Az-6jp" secondAttribute="leading" id="dZx-hV-wAV"/>
+                            <constraint firstAttribute="trailing" secondItem="kAI-ZN-VEq" secondAttribute="trailing" id="e3X-Ax-oK8"/>
+                            <constraint firstItem="2ly-44-9L5" firstAttribute="top" secondItem="a9V-ab-Ldt" secondAttribute="bottom" id="wWL-hu-Zkv"/>
+                            <constraint firstItem="kAI-ZN-VEq" firstAttribute="trailing" secondItem="a9V-ab-Ldt" secondAttribute="trailing" id="zUK-vD-FBi"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="contentView" destination="kAI-ZN-VEq" id="C5c-ph-jRM"/>
@@ -528,7 +542,6 @@
                             <constraint firstAttribute="trailing" secondItem="Axx-HX-J7W" secondAttribute="trailing" id="vx1-ai-yYx"/>
                         </constraints>
                     </view>
-                    <nil key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="imageView" destination="Wxg-nu-s0h" id="u52-FG-qFA"/>
                         <outlet property="scrollView" destination="Axx-HX-J7W" id="HC7-R5-RYX"/>
